--- a/config/config-tmpl.yaml
+++ b/config/config-tmpl.yaml
@@ -10,3 +10,4 @@ gene_regions_file: "helper/gene_regions.csv"
 disgenet_reference_file: "disease_database/{}.tsv"
 plink_path: ""
 is_binary: "FALSE"
+spectral_decorrelated: "TRUE"
