--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -29,7 +29,7 @@ rule moka_test:
         """
         export PATH=$PATH:{params.plink_path}
 
-        seq 1 22 | parallel -j {threads} Rscript scripts/moka.R {params.genotype} {input.gene_regions} {input.merged_weights} {params.genotype_path} {params.weights_source}  {{}} {params.is_binary} {params.spectral_decorrelated}
+        seq 1 22 | parallel -j {threads} Rscript scripts/moka.R {params.genotype} {input.gene_regions} {input.merged_weights} {params.genotype_path} {params.weights_source}  {{}} {params.is_binary} {params.spectral_decorrelated} scripts/estimate_h2_fastlmm.py
         """
 # # Rule 4: Merge MOKA Chromosome Results into zone
 rule merge_moka_results:
