--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -21,16 +21,15 @@ rule moka_test:
         spectral_decorrelated = config["spectral_decorrelated"]
     threads: 22
     log:
-        stdout="logs/wkas.stdout",
-        stderr="logs/wkas.stderr"
+        stdout="logs/moka.stdout",
+        stderr="logs/moka.stderr"
     conda:
         "envs/moka.yaml"
     shell:
-        """
-        export PATH=$PATH:{params.plink_path}
-
+        """(
+        export PATH=$PATH:{params.plink_path}\
         seq 1 22 | parallel -j {threads} Rscript scripts/moka.R {params.genotype} {input.gene_regions} {input.merged_weights} {params.genotype_path} {params.weights_source}  {{}} {params.is_binary} {params.spectral_decorrelated}
-        """
+        ) >{log} 2>&1"""
 # # Rule 4: Merge MOKA Chromosome Results into zone
 rule merge_moka_results:
     input:
@@ -40,10 +39,10 @@ rule merge_moka_results:
     conda:
         "envs/merge_moka_results.yaml"
     log:
-        stdout="logs/wkas.stdout",
-        stderr="logs/wkas.stderr"
+        stdout="logs/merge_moka.stdout",
+        stderr="logs/merge_moka.stderr"
     shell:
-        """
+        """(
         if [ -f "{params.merged_moka_results}" ]; then
                 rm "{params.merged_moka_results}"
         fi
@@ -53,7 +52,7 @@ rule merge_moka_results:
                 tail -n +2 \"$file\" >> {params.merged_moka_results}; \
             fi; \
         done
-        """
+        ) >{log} 2>&1"""
 # Rule 5: Perform Disgenet disease annotation of MOKA results
 rule disgenet_annotation_001:
     input:
@@ -65,9 +64,9 @@ rule disgenet_annotation_001:
     conda:
         "envs/disgenet.yaml"
     shell:
-        """
+        """(
         Rscript scripts/obtain_genes_in_DGN.R {input.merged_moka_results} {params.gene_annotation} 0.01
-        """
+        ) >{log} 2>&1"""
 
 rule disgenet_annotation_005:
     input:
@@ -79,9 +78,9 @@ rule disgenet_annotation_005:
     conda:
         "envs/disgenet.yaml"
     shell:
-        """
+        """(
         Rscript scripts/obtain_genes_in_DGN.R {input.merged_moka_results} {params.gene_annotation} 0.05
-        """
+        ) >{log} 2>&1"""
 
 rule manhattan_plots:
     input:
@@ -92,9 +91,9 @@ rule manhattan_plots:
     conda:
         "envs/manhattan.yaml"
     shell:
-        """
+        """(
         Rscript scripts/manhattan_plots.R {input.merged_moka_results} 
-        """
+        ) >{log} 2>&1"""
 rule kegg_pathway_analysis:
     input:
         merged_moka_results = expand("result_folder/merged_{prefix}_{weight_source}_SKAT.txt",prefix=config[
