--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -26,10 +26,10 @@ rule moka_test:
     conda:
         "envs/moka.yaml"
     shell:
-        """(
+        """
         export PATH=$PATH:{params.plink_path}
         seq 1 22 | parallel -j {threads} Rscript scripts/moka.R {params.genotype} {input.gene_regions} {input.merged_weights} {params.genotype_path} {params.weights_source}  {{}} {params.is_binary} {params.spectral_decorrelated}
-        )> {log.stdout} 2> {log.stderr}"""
+        > {log.stdout} 2> {log.stderr}"""
 # # Rule 4: Merge MOKA Chromosome Results into zone
 rule merge_moka_results:
     input:
@@ -42,7 +42,7 @@ rule merge_moka_results:
         stdout="logs/merge_moka.stdout",
         stderr="logs/merge_moka.stderr"
     shell:
-        """(
+        """
         if [ -f "{params.merged_moka_results}" ]; then
                 rm "{params.merged_moka_results}"
         fi
@@ -52,7 +52,7 @@ rule merge_moka_results:
                 tail -n +2 \"$file\" >> {params.merged_moka_results}; \
             fi; \
         done
-        )> {log.stdout} 2> {log.stderr}"""
+        > {log.stdout} 2> {log.stderr}"""
 # Rule 5: Perform Disgenet disease annotation of MOKA results
 rule disgenet_annotation_001:
     input:
@@ -64,9 +64,9 @@ rule disgenet_annotation_001:
     conda:
         "envs/disgenet.yaml"
     shell:
-        """(
+        """
         Rscript scripts/obtain_genes_in_DGN.R {input.merged_moka_results} {params.gene_annotation} 0.01
-        )> {log.stdout} 2> {log.stderr}"""
+        > {log.stdout} 2> {log.stderr}"""
 
 rule disgenet_annotation_005:
     input:
@@ -91,9 +91,9 @@ rule manhattan_plots:
     conda:
         "envs/manhattan.yaml"
     shell:
-        """(
+        """
         Rscript scripts/manhattan_plots.R {input.merged_moka_results} 
-        )> {log.stdout} 2> {log.stderr}"""
+        > {log.stdout} 2> {log.stderr}"""
 rule kegg_pathway_analysis:
     input:
         merged_moka_results = expand("result_folder/merged_{prefix}_{weight_source}_SKAT.txt",prefix=config[
@@ -105,9 +105,9 @@ rule kegg_pathway_analysis:
     conda:
         "envs/kegg_pathway.yaml"
     shell:
-        """
+        """(
         Rscript scripts/pathfindR_KEGG.R {input.merged_moka_results} {params.pval_thresh}
-        """
+        > {log.stdout} 2> {log.stderr}"""
 rule go_analysis:
     input:
         merged_moka_results = expand("result_folder/merged_{prefix}_{weight_source}_SKAT.txt",prefix=config[
@@ -119,9 +119,9 @@ rule go_analysis:
     conda:
         "envs/go_analysis.yaml"
     shell:
-        """
+        """(
         Rscript scripts/GO_analysis.R {input.merged_moka_results} {params.pval_thresh}
-        """
+        )> {log.stdout} 2> {log.stderr}"""
 
 rule unweighted_skat:
     input:
