--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,6 +8,6 @@ genotype_file_path: "genotype_data/"
 weights_file: "weights/test_geno_weights.csv"
 gene_regions_file: "helper/gene_regions.csv"
 disgenet_reference_file: "disease_database/{}.tsv"
-plink_path: "" #Path to plink binary
+plink_path: "helper/" #Path to plink binary
 is_binary: "TRUE"
 spectral_decorrelated: "FALSE"
