--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -27,9 +27,17 @@ rule moka_test:
         "envs/moka.yaml"
     shell:
         """
-        export PATH=$PATH:{params.plink_path}
+        # Install dependencies if missing
+        command -v parallel >/dev/null || (apt update && apt install -y parallel) || brew install parallel
+        if ! command -v plink >/dev/null && [ ! -f "{params.plink_path}/plink" ]; then
+            mkdir -p $(dirname {params.plink_path}) && cd $(dirname {params.plink_path})
+            wget -q https://s3.amazonaws.com/plink1-assets/plink_linux_x86_64_20250819.zip
+            unzip -q plink_linux_x86_64_20250819.zip && chmod +x plink && rm *.zip
+        fi
+        
+        export PATH={params.plink_path}:$PATH
         seq 1 22 | parallel -j {threads} Rscript scripts/moka.R {params.genotype} {input.gene_regions} {input.merged_weights} {params.genotype_path} {params.weights_source}  {{}} {params.is_binary} {params.spectral_decorrelated}
-      """
+        """
 # # Rule 4: Merge MOKA Chromosome Results into zone
 rule merge_moka_results:
     input:
@@ -139,7 +147,15 @@ rule unweighted_skat:
         "envs/moka.yaml"
     shell:
         """
-        export PATH=$PATH:{params.plink_path}
+        # Install dependencies if missing
+        command -v parallel >/dev/null || (apt update && apt install -y parallel) || brew install parallel
+        if ! command -v plink >/dev/null && [ ! -f "{params.plink_path}/plink" ]; then
+            mkdir -p $(dirname {params.plink_path}) && cd $(dirname {params.plink_path})
+            wget -q https://s3.amazonaws.com/plink1-assets/plink_linux_x86_64_20250819.zip
+            unzip -q plink_linux_x86_64_20250819.zip && chmod +x plink && rm *.zip
+        fi
+        
+        export PATH={params.plink_path}:$PATH
         mkdir -p {params.output_dir}
         seq 1 22 | parallel -j  {threads} --verbose Rscript scripts/skat_unweighted.R {params.genotype_prefix} {input.gene_regions} {params.genotype_path} {{}} {params.output_dir} 
         """
@@ -181,5 +197,3 @@ rule unweighted_disgenet_annotation_005:
         """
         Rscript scripts/obtain_genes_in_DGN.R {input.merged_unweighted_results} {params.gene_annotation} 0.05
         """
-
-
