--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -35,7 +35,7 @@ rule moka_test:
             unzip -q plink_linux_x86_64_20250819.zip
         fi
         
-        export PATH={params.plink_path}:$PATH
+        export PATH=$PATH:{params.plink_path}
         seq 1 22 | parallel -j {threads} Rscript scripts/moka.R {params.genotype} {input.gene_regions} {input.merged_weights} {params.genotype_path} {params.weights_source}  {{}} {params.is_binary} {params.spectral_decorrelated}
         """
 # # Rule 4: Merge MOKA Chromosome Results into zone
