docs: Add rule documentation, conda flags, and Docker info
- Add documentation for generate_gene_regions rule
- Update all Snakemake commands to include --use-conda flag
- Add Docker section with hub.docker.com/r/davidenoma/moka-gwas reference

--- a/workflow/envs/go_analysis.yaml
+++ b/workflow/envs/go_analysis.yaml
@@ -1,9 +1,8 @@
 channels:
-  - r
   - conda-forge
-  - bioconda
   - defaults
 dependencies:
   - r-base
+  - r-essentials
   - r-gprofiler2
   - r-cairo
