--- a/workflow/envs/annotation.yaml
+++ b/workflow/envs/annotation.yaml
@@ -1,7 +1,8 @@
 channels:
   - conda-forge
+  - bioconda
   - defaults
 dependencies:
   - r-base
-  - r-rtracklayer
+  - bioconductor-rtracklayer
 
