docs: Add rule documentation, conda flags, and Docker info
- Add documentation for generate_gene_regions rule
- Update all Snakemake commands to include --use-conda flag
- Add Docker section with hub.docker.com/r/davidenoma/moka-gwas reference
Test database

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -131,74 +131,74 @@ rule go_analysis:
         Rscript scripts/GO_analysis.R {input.merged_moka_results} {params.pval_thresh}
         > {log.stdout} 2> {log.stderr}"""
 
-rule unweighted_skat:
-    input:
-        gene_regions="helper/gene_regions.csv"
-    params:
-        genotype_prefix=config["genotype_prefix"],
-        genotype_path=config["genotype_file_path"],
-        output_dir="result_folder/unweighted/",
-        plink_path=config["plink_path"],
-    threads: 22
-    log:
-        stdout="logs/unweighted_skat.stdout",
-        stderr="logs/unweighted_skat.stderr"
-    conda:
-        "envs/moka.yaml"
-    shell:
-        """
-        # Install dependencies if missing
-
-        if ! command -v plink >/dev/null && [ ! -f "{params.plink_path}/plink" ]; then
-            mkdir -p $( {params.plink_path}) && cd $( {params.plink_path})
-            wget -q https://s3.amazonaws.com/plink1-assets/plink_linux_x86_64_20250819.zip
-            unzip -q plink_linux_x86_64_20250819.zip && chmod +x plink && rm *.zip
-            cd ..
-        fi
-        
-        export PATH={params.plink_path}:$PATH
-        mkdir -p {params.output_dir}
-        parallel --citation
-        seq 1 22 | parallel -j  {threads} --verbose Rscript scripts/skat_unweighted.R {params.genotype_prefix} {input.gene_regions} {params.genotype_path} {{}} {params.output_dir} 
-        """
-
-# Rule: merge_unweighted_results
-rule merge_unweighted_results:
-    input:
-        unweighted_skat_results=expand("result_folder/unweighted/{prefix}_{i}_result_chr_{i}.txt", i=range(1, 23), prefix=config["genotype_prefix"])
-    params:
-        merged_unweighted_results=expand("result_folder/merged_{prefix}_unweighted_SKAT.txt", prefix=config["genotype_prefix"])
-    log:
-        stdout="logs/merge_unweighted.stdout",
-        stderr="logs/merge_unweighted.stderr"
-    conda:
-        "envs/moka.yaml"
-    shell:
-        """
-        if [ -f "{params.merged_unweighted_results}" ]; then
-            rm "{params.merged_unweighted_results}"
-        fi
-        echo -e 'Gene_name\tGene_chromosome\tRegion_start\tRegion_end\tQ_test\tpvalue' > {params.merged_unweighted_results} && \
-        for file in {input.unweighted_skat_results}; do \
-            tail -n +2 "$file" >> {params.merged_unweighted_results}; \
-        done
-        """
-
-# Rule: unweighted_disgenet_annotation_005
-rule unweighted_disgenet_annotation_005:
-    input:
-        merged_unweighted_results=expand("result_folder/merged_{prefix}_unweighted_SKAT.txt", prefix=config["genotype_prefix"])
-    params:
-        gene_annotation=config["disgenet_reference_file"]
-    log:
-        stdout="logs/unweighted_disgenet_0.05.stdout",
-        stderr="logs/unweighted_disgenet_0.05.stderr"
-    conda:
-        "envs/disgenet.yaml"
-    shell:
-        """
-        Rscript scripts/obtain_genes_in_DGN.R {input.merged_unweighted_results} {params.gene_annotation} 0.05
-        """
+# rule unweighted_skat:
+#     input:
+#         gene_regions="helper/gene_regions.csv"
+#     params:
+#         genotype_prefix=config["genotype_prefix"],
+#         genotype_path=config["genotype_file_path"],
+#         output_dir="result_folder/unweighted/",
+#         plink_path=config["plink_path"],
+#     threads: 22
+#     log:
+#         stdout="logs/unweighted_skat.stdout",
+#         stderr="logs/unweighted_skat.stderr"
+#     conda:
+#         "envs/moka.yaml"
+#     shell:
+#         """
+#         # Install dependencies if missing
+#
+#         if ! command -v plink >/dev/null && [ ! -f "{params.plink_path}/plink" ]; then
+#             mkdir -p $( {params.plink_path}) && cd $( {params.plink_path})
+#             wget -q https://s3.amazonaws.com/plink1-assets/plink_linux_x86_64_20250819.zip
+#             unzip -q plink_linux_x86_64_20250819.zip && chmod +x plink && rm *.zip
+#             cd ..
+#         fi
+#
+#         export PATH={params.plink_path}:$PATH
+#         mkdir -p {params.output_dir}
+#         parallel --citation
+#         seq 1 22 | parallel -j  {threads} --verbose Rscript scripts/skat_unweighted.R {params.genotype_prefix} {input.gene_regions} {params.genotype_path} {{}} {params.output_dir}
+#         """
+#
+# # Rule: merge_unweighted_results
+# rule merge_unweighted_results:
+#     input:
+#         unweighted_skat_results=expand("result_folder/unweighted/{prefix}_{i}_result_chr_{i}.txt", i=range(1, 23), prefix=config["genotype_prefix"])
+#     params:
+#         merged_unweighted_results=expand("result_folder/merged_{prefix}_unweighted_SKAT.txt", prefix=config["genotype_prefix"])
+#     log:
+#         stdout="logs/merge_unweighted.stdout",
+#         stderr="logs/merge_unweighted.stderr"
+#     conda:
+#         "envs/moka.yaml"
+#     shell:
+#         """
+#         if [ -f "{params.merged_unweighted_results}" ]; then
+#             rm "{params.merged_unweighted_results}"
+#         fi
+#         echo -e 'Gene_name\tGene_chromosome\tRegion_start\tRegion_end\tQ_test\tpvalue' > {params.merged_unweighted_results} && \
+#         for file in {input.unweighted_skat_results}; do \
+#             tail -n +2 "$file" >> {params.merged_unweighted_results}; \
+#         done
+#         """
+#
+# # Rule: unweighted_disgenet_annotation_005
+# rule unweighted_disgenet_annotation_005:
+#     input:
+#         merged_unweighted_results=expand("result_folder/merged_{prefix}_unweighted_SKAT.txt", prefix=config["genotype_prefix"])
+#     params:
+#         gene_annotation=config["disgenet_reference_file"]
+#     log:
+#         stdout="logs/unweighted_disgenet_0.05.stdout",
+#         stderr="logs/unweighted_disgenet_0.05.stderr"
+#     conda:
+#         "envs/disgenet.yaml"
+#     shell:
+#         """
+#         Rscript scripts/obtain_genes_in_DGN.R {input.merged_unweighted_results} {params.gene_annotation} 0.05
+#         """
 
 rule generate_gene_regions:
     params:
